<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical"
    >


    <!-- 제목 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:text="@string/title_profile"
        android:textStyle="bold"
        android:textSize="25sp"

        android:gravity="center"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <!-- 계정(아이콘) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="20dp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            >
            <TextView
                android:id="@+id/loginID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="myLoginID"
                android:textSize="15sp"
                android:textStyle="bold"
            />
            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="myNickName"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal"
        android:orientation="vertical"

        android:paddingHorizontal="20dp"

        >
        <!-- 계정 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/subtitle_id"
            android:textSize="15sp"
            android:textStyle="bold"

            android:paddingVertical="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_id_email"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_id_pwd"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_id_nickname"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_id_exit"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />

        </LinearLayout>


        <!-- 앱 설정 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/subtitle_app"
            android:textSize="15sp"
            android:textStyle="bold"

            android:paddingVertical="5dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_app_login"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />
        </LinearLayout>


        <!-- 기타 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/subtitle_other"
            android:textSize="15sp"
            android:textStyle="bold"

            android:paddingVertical="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/chg_oth_logout"
                android:textSize="12sp"
                android:paddingVertical="5dp"
                />
        </LinearLayout>




    </LinearLayout>

</LinearLayout>