<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/mainGreen"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginVertical="60dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textFontWeight="800"
        android:letterSpacing="0.2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgWhite"
            android:paddingHorizontal="5dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:padding="10dp"
                android:drawableStart="@drawable/icons_avatar"
                android:drawablePadding="20dp"
                android:background="@null"
                app:boxBackgroundMode="none"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgWhite"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pwd"
                android:padding="10dp"
                android:drawableStart="@drawable/icons_padlock"
                android:drawablePadding="20dp"
                android:background="@null"
                app:boxBackgroundMode="none"
                android:maxLength="20"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    
    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="70dp"
        android:paddingVertical="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            >
            <CheckBox
                android:id="@+id/ckbox_autoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/ckbox_autoLogin"

                android:text="@string/auto_login"
                android:textSize="@dimen/text_sub"
                />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/otherLogin"
            android:textStyle="bold"
            android:textSize="@dimen/text_sub"
            />
    </FrameLayout>

    <Button
        android:id="@+id/login"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@color/textGreen"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:letterSpacing="0.2"
        />

    <LinearLayout
        android:paddingVertical="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lost_id"
            android:textSize="@dimen/text_sub"


            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="  |  "
            android:textSize="@dimen/text_sub"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/lost_pwd"
            android:textSize="@dimen/text_sub"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="  |  "
            android:textSize="@dimen/text_sub"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sign_up"
            android:textSize="@dimen/text_sub"
            />
    </LinearLayout>

    <TextView
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="@dimen/text_sub"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@color/textGreen"
        android:gravity="center"
        android:text="카카오톡 로그인"
        android:textColor="@color/white"
        android:letterSpacing="0.2"
        />
</LinearLayout>