<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.commu.CommuFragmentBoard_hot"
    >


    <!-- 제목 영역 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleGreen"
        >
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"

            android:src="@drawable/icons_left_arrow"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"

            android:text="@string/HotBoard"
            android:textStyle="bold"
            android:textSize="25sp"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:id="@+id/btn_search"

            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:layout_marginRight="10dp"

            android:src="@drawable/icons_search"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center_vertical"
        >

        <RadioButton
            android:id="@+id/radio_qna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QnABoard"
            android:button="@null"
            android:background="@null"
            android:checked="true"
            android:padding="3dp"
            />

        <RadioButton
            android:id="@+id/radio_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/FreeBoard"
            android:button="@null"
            android:background="@null"
            android:padding="3dp"
            />

        <RadioButton
            android:id="@+id/radio_myPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/PicBoard"
            android:button="@null"
            android:background="@null"
            android:padding="3dp"
            />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        tools:listitem="@layout/item_post_text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HotRules"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        />
</LinearLayout>