<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.commu.CommuFragmentBoard_img"
    android:orientation="vertical"
    >
    <!-- 제목 영역 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleGreen"
        >
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"

            android:src="@drawable/icons_left_arrow"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"

            android:text="@string/PicBoard"
            android:textStyle="bold"
            android:textSize="25sp"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <ImageView
            android:id="@+id/btn_search"

            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:layout_marginRight="10dp"

            android:src="@drawable/icons_search"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:id="@+id/sort_radio_group"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <RadioButton
                android:id="@+id/sort_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_time"
                android:textColor="@color/option_radio_clickable_color"
                android:button="@null"
                android:textSize="@dimen/text_sub"
                android:background="@null"
                android:checked="true"
                android:padding="15dp"
                />

            <RadioButton
                android:id="@+id/sort_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_like"
                android:textColor="@color/option_radio_clickable_color"
                android:textSize="@dimen/text_sub"
                android:button="@null"
                android:background="@null"
                android:padding="15dp"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/btn_write"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_sub"
            android:text="@string/writing"
            android:padding="15dp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_post_image"
        android:scrollbars="vertical"
        />
</LinearLayout>